test/asm/macro-arg-in-string.err
error: Illegal character escape '!'
    at macro-arg-in-string.asm(12)
Assembly aborted with 1 error!
